--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <title>Self Care Center</title>
   </head>
   <body>
-  
+      <section class="projectName">
+        <h1> <span style='font-size:30px;'>&#10024;</span> Self Care Center <span style='font-size:30px;'>&#10024;</span> </h1>
+      </section>
+      <section class="question">
+        <h2> Which type of Message? </h2>
+      </section>
+      <section class="text-selection-box">
+        <input type="radio" id="affirmation-box" />
+        <label for="affirmation-box"><em>affirmation</em></label>
+        <input type="radio" id="mantra-box" />
+        <label for="mantra-box"><em>mantra</em></label>
+        <button class= "receive-message-button"> Receive Message </button>
+      </section>
+      <section class="logo-text-box">
+        <img src="./assets/meditate.svg" width="100" height="100">
+      </section>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
