add initial functions- broken

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <h2> Which type of Message? </h2>
       </section>
       <section class="text-selection-box">
-        <input type="radio" id="affirmation-box" />
+        <input type="radio" name="radio-button" id="affirmationId"/>
         <label for="affirmation-box"><em>affirmation</em></label>
-        <input type="radio" id="mantra-box" />
+        <input type="radio" name="radio-button" id="mantraId"/>
         <label for="mantra-box"><em>mantra</em></label>
         <button class= "receive-message-button"> Receive Message </button>
       </section>
       <section class="logo-text-box">
-        <img src="./assets/meditate.svg" width="100" height="100">
-      </section>
+          <img class="logo" id="logo" src="./assets/meditate.svg" width="100" height="100">
+          <h3 id= "output"> return text here </h3>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
