--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <input type="radio" name="radio-button" id="mantraId"/>
         <label for="mantra-box"><em>mantra</em></label>
         <button class= "receive-message-button"> Receive Message </button>
+        <button class= "view clear-view hidden"> Clear Message </button>
       </section>
       <section class="logo-text-box">
           <img class="logo" id="logo" src="./assets/meditate.svg" width="100" height="100">
-          <h3 id= "output"> return text here </h3>
+          <h3 class="view output-view hidden" > return text here </h3>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
